versioned_docs/version-2022.2.7/professor/jose_jurandir_pereira_junior.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";
const data = {
  title: "José Jurandir Pereira Junior",
  weekClasses: [
    {
      dayName: "Segunda-Feira",
      dayClasses: [
        {
          subject: "Filosofia IV",
          size: 1,
          teachers: [
            "José Jurandir Pereira Junior"
          ],
          classroom: "Sala 3-1",
          students: [
            "IIN2019"
          ],
          time: "08:20 - 09:10"
        }
      ]
    },
    {
      dayName: "Terça-Feira",
      dayClasses: [
        {
          subject: "Filosofia 4",
          size: 1,
          teachers: [
            "José Jurandir Pereira Junior"
          ],
          classroom: "Sala 9-2",
          students: [
            "EIN2019"
          ],
          time: "07:30 - 08:20"
        },
        {
          subject: "Filosofia III",
          size: 1,
          teachers: [
            "José Jurandir Pereira Junior"
          ],
          classroom: "Sala 16-2",
          students: [
            "AGO2020"
          ],
          time: "10:15 - 11:05"
        },
        {
          subject: "Filosofia III",
          size: 1,
          teachers: [
            "José Jurandir Pereira Junior"
          ],
          classroom: "Sala 13-2",
          students: [
            "IIW2020"
          ],
          time: "11:05 - 11:55"
        }
      ]
    },
    {
      dayName: "Quarta-Feira",
      dayClasses: [
        {
          subject: "Filosofia 3",
          size: 1,
          teachers: [
            "José Jurandir Pereira Junior"
          ],
          classroom: "Sala 8-2",
          students: [
            "EIN2020"
          ],
          time: "07:30 - 08:20"
        }
      ]
    },
    {
      dayName: "Quinta-Feira",
      dayClasses: [
        {
          subject: "Filosofia III",
          size: 1,
          teachers: [
            "José Jurandir Pereira Junior"
          ],
          classroom: "Sala 16-2",
          students: [
            "AGO2020"
          ],
          time: "15:05 - 15:55"
        },
        {
          subject: "Filosofia III",
          size: 1,
          teachers: [
            "José Jurandir Pereira Junior"
          ],
          classroom: "Sala 13-2",
          students: [
            "IIW2020"
          ],
          time: "07:30 - 08:20"
        }
      ]
    },
    {
      dayName: "Sexta-Feira",
      dayClasses: []
    }
  ],
  time: [
    {
      time: "07:30 - 08:20",
      size: 50
    },
    {
      time: "08:20 - 09:10",
      size: 50
    },
    {
      time: "09:10 - 09:25",
      size: 15
    },
    {
      time: "09:25 - 10:15",
      size: 50
    },
    {
      time: "10:15 - 11:05",
      size: 50
    },
    {
      time: "11:05 - 11:55",
      size: 50
    },
    {
      time: "11:55 - 13:10",
      size: 75
    },
    {
      time: "13:10 - 14:00",
      size: 50
    },
    {
      time: "14:00 - 14:50",
      size: 50
    },
    {
      time: "14:50 - 15:05",
      size: 15
    },
    {
      time: "15:05 - 15:55",
      size: 50
    },
    {
      time: "15:55 - 16:45",
      size: 50
    },
    {
      time: "16:45 - 19:00",
      size: 135
    },
    {
      time: "19:00 - 19:50",
      size: 50
    },
    {
      time: "19:50 - 20:40",
      size: 50
    },
    {
      time: "20:40 - 21:00",
      size: 20
    },
    {
      time: "21:00 - 21:50",
      size: 50
    },
    {
      time: "21:50 - 22:40",
      size: 50
    }
  ]
}

# José Jurandir Pereira Junior

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
