versioned_docs/version-2023.1.1/professor/jose_jurandir_pereira_junior.mdx
import { Grid } from "@site/src/components/Grid";
const data = {
  title: "José Jurandir Pereira Junior",
  weekClasses: [
    {
      dayName: "Segunda-Feira",
      dayClasses: []
    },
    {
      dayName: "Terça-Feira",
      dayClasses: [
        {
          subject: "Filosofia I - 2328",
          size: 1,
          teachers: [
            "José Jurandir Pereira Junior"
          ],
          classroom: "Sala 8-2",
          students: "COM2023",
          time: "11:05 - 11:55"
        },
        {
          subject: "Filosofia III - 1245",
          size: 1,
          teachers: [
            "José Jurandir Pereira Junior"
          ],
          classroom: "Sala 16-2",
          students: "IIW2021",
          time: "09:25 - 10:15"
        },
        {
          subject: "Legislação Aplicada e Direito do Consumidor - 1509",
          size: 2,
          teachers: [
            "José Jurandir Pereira Junior"
          ],
          classroom: "Sala 13-2",
          students: "TGC2023",
          time: "19:00 - 19:50"
        },
        {
          subject: "Ética e relações humanas no trabalho - 2336",
          size: 2,
          teachers: [
            "José Jurandir Pereira Junior"
          ],
          classroom: "Sala 2-2",
          students: "TAL2023",
          time: "21:00 - 21:50"
        }
      ]
    },
    {
      dayName: "Quarta-Feira",
      dayClasses: []
    },
    {
      dayName: "Quinta-Feira",
      dayClasses: [
        {
          subject: "Direito do Trabalho e do consumidor - 2330",
          size: 2,
          teachers: [
            "José Jurandir Pereira Junior"
          ],
          classroom: "Sala 8-2",
          students: "COM2023",
          time: "07:30 - 08:20"
        },
        {
          subject: "Filosofia I - 2328",
          size: 1,
          teachers: [
            "José Jurandir Pereira Junior"
          ],
          classroom: "Sala 8-2",
          students: "COM2023",
          time: "11:05 - 11:55"
        },
        {
          subject: "Legislação Aplicada e Direito do Consumidor - 1509",
          size: 2,
          teachers: [
            "José Jurandir Pereira Junior"
          ],
          classroom: "Sala 13-2",
          students: "TGC2023",
          time: "19:00 - 19:50"
        }
      ]
    },
    {
      dayName: "Sexta-Feira",
      dayClasses: [
        {
          subject: "Direito Empresarial e Tributário - 1494",
          size: 2,
          teachers: [
            "José Jurandir Pereira Junior"
          ],
          classroom: "Sala 12-2",
          students: "TGC2022",
          time: "19:00 - 19:50"
        },
        {
          subject: "Direito Empresarial e Tributário - 1494",
          size: 2,
          teachers: [
            "José Jurandir Pereira Junior"
          ],
          classroom: "Sala 12-2",
          students: "TGC2022",
          time: "21:00 - 21:50"
        },
        {
          subject: "Filosofia II - 1232",
          size: 1,
          teachers: [
            "José Jurandir Pereira Junior"
          ],
          classroom: "Sala 13-2",
          students: "IIW2022A",
          time: "11:05 - 11:55"
        },
        {
          subject: "Filosofia III - 1245",
          size: 1,
          teachers: [
            "José Jurandir Pereira Junior"
          ],
          classroom: "Sala 16-2",
          students: "IIW2021",
          time: "09:25 - 10:15"
        }
      ]
    }
  ],
  time: [
    {
      time: "07:30 - 08:20",
      size: 50
    },
    {
      time: "08:20 - 09:10",
      size: 50
    },
    {
      time: "09:10 - 09:25",
      size: 15
    },
    {
      time: "09:25 - 10:15",
      size: 50
    },
    {
      time: "10:15 - 11:05",
      size: 50
    },
    {
      time: "11:05 - 11:55",
      size: 50
    },
    {
      time: "11:55 - 13:10",
      size: 75
    },
    {
      time: "13:10 - 14:00",
      size: 50
    },
    {
      time: "14:00 - 14:50",
      size: 50
    },
    {
      time: "14:50 - 15:05",
      size: 15
    },
    {
      time: "15:05 - 15:55",
      size: 50
    },
    {
      time: "15:55 - 16:45",
      size: 50
    },
    {
      time: "16:45 - 19:00",
      size: 135
    },
    {
      time: "19:00 - 19:50",
      size: 50
    },
    {
      time: "19:50 - 20:40",
      size: 50
    },
    {
      time: "20:40 - 21:00",
      size: 20
    },
    {
      time: "21:00 - 21:50",
      size: 50
    },
    {
      time: "21:50 - 22:40",
      size: 50
    }
  ]
}

# José Jurandir Pereira Junior

<div>
    {
        <Grid
            title={data.title} 
            weekClasses={data.weekClasses} 
            time={data.time}
        />
    }
</div>